--- a/Add_Users_to_dspCompose.htm
+++ b/Add_Users_to_dspCompose.htm
@@ -238,8 +238,8 @@ The <span style="font-weight: bold;">User ID</span> list box displays all users 
                                             <h5>Resources</h5>
                                             <p class="footer"><a href="glossary.htm" target="_blank">Glossary</a>
                                             </p>
-                                            <p class="footer">Product Licenses</p>
-                                            <p class="footer">&#160;</p>
+                                            <p class="footer"><a href="When_to_request_a_new_product_license.htm">Product Licenses</a>
+                                            </p>
                                         </div>
                                         <div>
                                             <p class="footer" id="di">&#160;
