--- a/Set_PrecedWksCount_Dashbrds.htm
+++ b/Set_PrecedWksCount_Dashbrds.htm
@@ -214,8 +214,8 @@
                                             <h5>Resources</h5>
                                             <p class="footer"><a href="glossary.htm" target="_blank">Glossary</a>
                                             </p>
-                                            <p class="footer">Product Licenses</p>
-                                            <p class="footer">&#160;</p>
+                                            <p class="footer"><a href="When_to_request_a_new_product_license.htm">Product Licenses</a>
+                                            </p>
                                         </div>
                                         <div>
                                             <p class="footer" id="di">&#160;
